# robmcf-greedy

./: .gitignore  Cargo.toml  README.md  aachen_baseline.json  aachen_baseline_20.json  aachen_baseline_stricter.json  aachen_test.json  cologne_baseline.json  cologne_baseline_10.json  cologne_baseline_20.json  cologne_baseline_stricter.json  error.json  flake.nix  gui_output.json  network.json  rand1.json  test
cli/: Cargo.toml
cli/src/: main.rs
examples/: 20.json  20_high_fixed_loads.json  40.json  aachen.json  chapter_3.json  chapter_4.json  chapter_5.json  chapter_6.json  cologne.json  greedy_optimal.json  gurobi_but_not_greedy.json  network.json  rand2.json  rand3.json  rand4.json  rand5.json  random_nrw.json
gui/: Cargo.toml
gui/src/: main.rs
gui/src/camera/: mod.rs
gui/src/network/: arc.rs  mod.rs  vertex.rs
gui/src/shared/: mod.rs
scraper/: csv_from_raw.py  flake.nix  network_from_csv.py  output.csv  requirements.txt  vertices.csv.bak
scraper/output/: isr_extracted.csv  network_aachen_neuss.json  vertices.csv
scraper/src/: main.py
src/: lib.rs  main.rs  matrix.rs  network.rs
src/algorithms/: floyd_warshall.rs  greedy.rs  integer_program.rs  integer_program_full.rs  mod.rs
src/auxiliary/: b_tuple.rs  from_network.rs  mod.rs  network_state.rs  preprocessing.rs  scenario.rs  supply_token.rs
src/ilp/: ilp_full.rs  ilp_partial.rs  mod.rs  util.rs
src/matrix/: display.rs  eq.rs  matrix.rs  mod.rs  serde.rs
src/network/: auxiliary_network.rs  b_tuple.rs  baseline.rs  display.rs  export.rs  mod.rs  network.rs  network_state.rs  random.rs  (+5 more)
(+17 files in other folders)
