[package]
name = "robmcf_greedy"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.2"
dashmap = { version = "6.0.1", features = ["rayon"] }
colored = "2.1.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = {version = "1.0.206", features = ["derive"]}
serde_json = "1.0.124"
log = "0.4.22"

[workspace]
members = ["cli"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
