[package]
name = "robmcf_greedy"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.2"
dashmap = { version = "6.0.1", features = ["rayon"] }
colored = "2.1.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = {version = "1.0.206", features = ["derive"]}
serde_json = "1.0.124"
log = "0.4.22"
clap = { version = "4.5.17", features = ["derive"] }
grb = "2.0.1"
csv = "1.3.0"
strum = { version = "0.26.3", features = ["derive"] }

[workspace]
members = ["cli", "gui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
