[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25.2"
bevy_egui = "0.29.0"
bevy_mod_picking = "0.20.1"
simple-easing = "1.0.1"
robmcf_greedy = {path = "../"}
# bevy_prototype_lyon = "0.12.0"
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git", branch = "master" }
